  * apt-pkg/pkgcache.h:
    - readd All{Foreign,Allowed} as suggested by Julian to
      remain strictly API compatible
  * apt-pkg/acquire*.{cc,h}:
    - try even harder to support really big files in the fetcher by
      converting (hopefully) everything to 'long long' (Closes: #632271)
  * ftparchive/writer.cc:
    - generate all checksums in one run over the file for Release

  [ Michael Vogt ]
  * merge fixes from the debian/unstable upload
  * merge lp:~mvo/apt/sha512-template to get fixes for the 
    sha1/md5 verifiation (closes: #632520)

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 13 Jul 2011 23:22:14 +0200

apt (0.8.16~exp2) experimental; urgency=low

  [ David Kalnischkies ]
  * [ABI-Break] Implement EDSP in libapt-pkg so that all front-ends which
    use the internal resolver can now be used also with external
    ones as the usage is hidden in between the old API
  * provide two edsp solvers in apt-utils:
    - 'dump' to quickly output a complete scenario and
    - 'apt' to use the internal as an external resolver
  * apt-pkg/pkgcache.h:
    - clean up mess with the "all" handling in MultiArch to
      fix LP: #733741 cleanly for everyone now
  * apt-pkg/depcache.cc:
    - use a boolean instead of an int for Add/Remove in AddStates
      similar to how it works with AddSizes
    - let the Mark methods return if their marking was successful
    - if a Breaks can't be upgraded, remove it. If it or a Conflict
      can't be removed the installation of the breaker fails.
  * cmdline/apt-get.cc:
    - do not discard the error messages from the resolver and instead
      only show the general 'Broken packages' message if nothing else

  [ Stefano Zacchiroli ]
  * doc/external-dependency-solver-protocol.txt:
    - describe EDSP and the configuration interface around it
  
  [ Michael Vogt ]
  * [ABI-Break] merge lp:~mvo/apt/sha512-template to add support for sha512
  * [ABI-Break] merge lp:~mvo/apt/dpointer to support easier extending